# autom8

./: CMakeLists.txt
src/: CMakeLists.txt  json_ext.h  main.cpp
src/Resources/: And.cpp  And.h  Formula.cpp  Formula.h  History.cpp  History.h  IO.cpp  IO.h  Input.cpp  Input.h  Not.cpp  Not.h  Or.cpp  Or.h  Property.cpp  Property.h  Relation.cpp  Relation.h  Resource.cpp  Resource.h  Resources.cpp  Resources.h  Time.cpp  Time.h
src/hw/: I2C.cpp  I2C.h
tests/: AndTests.cpp  CMakeLists.txt  FormulaTests.cpp  NotTests.cpp  OrTests.cpp  ResourceTests.cpp
